# story-generator

./: README.md  pyproject.toml
backend/: chains.py  image_caption_node.py  main.py  node.py
backend/langgraph/nodes/: vision_node.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: GenreSelector.css  GenreSelector.tsx  ImageUploader.css  ImageUploader.tsx  StoryDisplay.css  StoryDisplay.tsx  StoryPromptInput.css  StoryPromptInput.tsx
frontend/src/utils/: api.ts
