[project]
name = "story-maker"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.11, <=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "torch (>=2.7.1,<3.0.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "transformers (>=4.54.0,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
